--- a/MyTikTokBackup.Desktop/MyTikTokBackup.Desktop/Views/UserDataPage.xaml
+++ b/MyTikTokBackup.Desktop/MyTikTokBackup.Desktop/Views/UserDataPage.xaml
@@ -37,7 +37,7 @@
                 <Run Text="{x:Bind ViewModel.Urls.Count, Mode=OneWay}"/> urls 
                 <LineBreak/>
                 <Run Text="{x:Bind ViewModel.FavoriteVideos.Count, Mode=OneWay}"/>
-                favorite videos to download
+                bookmarked videos ready to download
             </TextBlock>
             
             <Button
